Fix content being slightly off center on mobile

--- a/web/css/home.css
+++ b/web/css/home.css
@@ -1,5 +1,5 @@
 /*@media screen and (min-width:320px) and (max-width:640px) {
-   for screens that are at least 320 pixels wide but less than or equal to 640 pixels wide 
+   for screens that are at least 320 pixels wide but less than or equal to 640 pixels wide
 }
 */
 @media only screen and (max-width : 600px) {
@@ -11,7 +11,6 @@
     }
 
     #main #content {
-        width: 100% ;
         font-size: 10px;
     }
 
